# drf_comments

./: .env_example  .gitignore  Dockerfile  Procfile  README.md  db_diagram.sql  docker-compose.yml  pyproject.toml  requirements.txt
simple_blog/blog/: captcha_challenge.py  consumers.py  documents.py  forms.py  models.py  routing.py  search_indexes.py  serializers.py  signals.py  tasks.py  views.py
simple_blog/blog/management/commands/: reindex_comments.py
simple_blog/blog/migrations/: 0001_initial.py  0002_remove_comment_captcha.py
simple_blog/simple_blog/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
